--- a/email.html
+++ b/email.html
@@ -5,7 +5,7 @@
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 12/12/2017  |  Alpha Stage -->
+Last Update: 15/12/2017  |  Alpha Stage -->
 
 <!DOCTYPE html> 
 <html>
@@ -30,18 +30,17 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
  <a href="javascript:void(0)" onclick="w3_close()" title="Close Sidemenu" 
   class="w3-bar-item w3-button w3-hide-large w3-large">Close <i class="fa fa-remove"></i></a>
 <a id="myBtn" onclick="myFunc('Demo1')" href="javascript:void(0)" class="w3-bar-item w3-button"><i class="fa fa-inbox w3-margin-right"></i>LOAD (5)<i class="fa fa-caret-down w3-margin-left"></i></a>
-  <div id="Demo1" class="w3-hide w3-animate-left">
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('Borge');w3_close();" id="firstTab">
-      <div class="w3-container">
-    <img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">Papaspyrou A.</span>
-      </div>
-    </a>
-     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('Jane');w3_close();">
-      <div class="w3-container">
-        <img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">My CV</span>
-         </div>
-    </a>
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('John');w3_close();">
+  
+<div id="Demo1" class="w3-hide w3-animate-left">
+<a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('about');w3_close();" id="firstTab">
+<div class="w3-container">
+<img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">Papaspyrou A.</span></div></a>
+
+<a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('cv');w3_close();">
+<div class="w3-container">
+<img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">My CV</span></div></a>
+        
+<a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('mail');w3_close();">
       <div class="w3-container">
         <img class="w3-round w3-margin-right" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:15%;"><span class="w3-opacity w3-large">Contact Form</span></div></a>
         
@@ -64,50 +63,34 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 <i class="fa fa-bars w3-button w3-white w3-hide-large w3-xlarge w3-margin-left w3-margin-top" onclick="w3_open()"></i>
 <a href="https://m.me/papaspyrou.alexandros" class="w3-hide-large w3-blue w3-button w3-right w3-margin-top w3-margin-right" onclick="document.getElementById('id01').style.display='block'"><i class="fa fa-comments-o"></i></a>
 
-<div id="Borge" class="w3-container person">
-  <br>
-  <img class="w3-round  w3-animate-top" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:20%;">
-  <h5 class="w3-opacity">Subject: Contact Me</h5>
-  <h4><i class="fa fa-clock-o"></i> From Papaspyrou Alexandros, Dec 12, 2017.</h4>
-  <a class="w3-button w3-red" href="#">sent me Email<i class="w3-margin-left fa fa-mail-reply"></i></a>
-  <a class="w3-button w3-blue" href="#">sent me message<i class="w3-margin-left fa fa-mail-reply"></i></a>
-  <a class="w3-button w3-green" href="#">Call Me<i class="w3-margin-left fa fa-arrow-right"></i></a>
-<a class="w3-button w3-light-grey" href="#">talk to my BOT<i class="w3-margin-left fa fa-mail-reply"></i></a>
-<br><br>   
-<a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:14px;color:black"></i></a>
-<a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:14px;color:black"></i></a>
-<a href=" http://stackoverflow.com/users/7315499/alexispapy "><i class="fa fa-stack-overflow" style="font-size:14px;color:black"></i></a>
-<a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:black"></i></a>
-<a href=" https://www.reddit.com/user/alexispapy "><i class="fa fa-reddit-alien" style="font-size:14px;color:black"></i></a>
-<a href="https://www.youtube.com/channel/UCticUCJNkJpUvLq6F-1Zujw "><i class="fa fa-youtube-play" style="font-size:14px;color:black"></i></a> 
-<a href=" https://www.flickr.com/photos/alexispapy/albums"><i class="fa fa-flickr" style="font-size:14px;color:black"></i></a>
-<a href="https://www.facebook.com/papaspyrou.alexandros"><i class="fa fa-facebook" style="font-size:14px;color:black"></i></a> 
-<a href=" http://www.slideshare.net/alexandrospapaspurou "><i class="fa fa-slideshare" style="font-size:14px;color:black"></i></a>
-<a href="https://www.instagram.com/alexandrospapaspyrou"><i class="fa fa-instagram" style="font-size:14px;color:black"></i></a>
-<a href=" https://plus.google.com/+AlexandrosPapaspyrou "><i class="fa fa-google-plus" style="font-size:14px;color:black"></i></a>
-<a href=" http://www.instructables.com/member/alexispapy/"><i class="fa fa-rocket" style="font-size:14px;color:black"></i></a>
-<a href=" https://bitbucket.org/alexispapy "><i class="fa fa-bitbucket" style="font-size:14px;color:black"></i></a>
-<a href=" https://vimeo.com/alexispapy "><i class="fa fa-vimeo" style="font-size:14px;color:black"></i></a>
-<a href=" https://gr.pinterest.com/alexispapy "><i class="fa fa-pinterest-p" style="font-size:14px;color:black"></i></a>
-<a href=" https://alexispapy.tumblr.com/ "><i class="fa fa-tumblr"></i></a>
-<a href=" 6949452023 "><i class="fa fa-whatsapp"></i></a>
-<a href=" a-papaspyrou@outlook.com.gr  "><i class="fa fa-skype"></i></a> 
-<hr>
-  <p>Ο διαδικτυακός αυτός χώρος εξελίσσεται και συντηρείται αποκλειστικά από τον Alexandro Papaspyrou. Γίνεται κάθε προσπάθεια ώστε να παρέχονται χωρίς διακοπή όλες οι σελίδες, οι υπηρεσίες, οι επιλογές και τα περιεχόμενα αλλά δεν μπορούμε να εγγυηθούμε ότι δεν θα υπάρξουν αστοχίες και σφάλματα. Λαμβάνουμε όλα τα απαραίτητα μέτρα ώστε να μην υπάρξουν ιοί η άλλο κακόβουλο λογισμικό στην ιστοσελίδα ή στους εξυπηρετητές (servers) που την φιλοξενούν, αλλά δεν μπορούμε να εγγυηθούμε τα αποτελέσματα. Οι δημιουργοί της παρούσας ιστοσελίδας διατηρούν το δικαίωμα να διακόψουν προσωρινά ή μόνιμα τη λειτουργία της, για οποιονδήποτε λόγο. Σε αυτή την περίπτωση δεν φέρουν καμία ευθύνη για τυχόν απώλεια δεδομένων, κειμένων, φωτογραφιών κλπ. που έχουν αναρτηθεί από κάποιον χρήστη. Το site, μεταξύ άλλων, μπορεί να υποστηρίζει συχνές ερωτήσεις, δυνατότητα επικοινωνίας, διαφημίσεις, banners, δημοσκοπήσεις και μηνύματα σε σημεία που επιλέγουν οι διαχειριστές του.</p>
-	<p>Το Site ελέγχεται καθημερινά για ιούς και κακόβουλο λογισμικό από https://www.virustotal.com https://quttera.com https://sitecheck.sucuri.net. Το περιεχόμενο και η πρόσβαση στο site ήταν, είναι και θα παραμείνει δωρεάν. Όλο το site είναι 100% HTML γραμμένο με λεπτομέρεια και αγάπη . https://www.w3schools.com/ Με online εμπειρία περισσότερο από 6 χρόνια.</p>
-	<p>DadoBox / RoboDay & many more... <br>online since February 2011</p>
-</div>
-<!-- CV --><div id="Jane" class="w3-container person"><h5 class="w3-opacity">My CV</h5><div w3-include-html="https://alexandroshub.github.io/cv.html" id="home"></div><script>w3.includeHTML();</script></div><!-- /CV -->
+<!-- about -->
+    <div id="about" class="w3-container person">
+    <h5 class="w3-opacity">My About</h5>
+    <div w3-include-html="https://alexandroshub.github.io/about.html" id="home"></div><script>w3.includeHTML();</script></div><!-- /about -->
 
-<div id="John" class="w3-container person"><hr><p>Contact Me.</p>
-<!-- www.123formbuilder.com script begins here -->
-<script type="text/javascript" defer src="//www.123formbuilder.com/embed/3216186.js" data-role="form" data-default-width="650px"></script><!-- www.123formbuilder.com script ends here --><p>That's it!</p></div>
+<!-- CV -->
+    <div id="cv" class="w3-container person">
+    <h5 class="w3-opacity">My CV</h5>
+    <div w3-include-html="https://alexandroshub.github.io/cv.html" id="home">
+    </div><script>w3.includeHTML();</script></div><!-- /CV -->
 
-<div id="proj" class="w3-container person"><h5 class="w3-opacity" id="proj">My proj</h5>
-<!-- proj --><a id="proj"><div w3-include-html="https://alexandroshub.github.io/projects.html" id="home"></div><script>w3.includeHTML();</script><!-- /proj --> </div>
- 
-<div id="links" class="w3-container person"><h5 class="w3-opacity">My links</h5>
-<!-- links --><div w3-include-html="https://alexandroshub.github.io/links.html" id="home"></div><script>w3.includeHTML();</script><!-- /links --> </div>
+<!-- Contact -->
+    <div id="mail" class="w3-container person"><hr><p>Contact Me.</p>
+    <!-- www.123formbuilder.com script begins here -->
+    <script type="text/javascript" defer src="//www.123formbuilder.com/embed/3216186.js" data-role="form" data-default-width="650px">
+    </script><!-- www.123formbuilder.com script ends here --><p>That's it!</p></div><!-- /Contact -->
+
+<!-- proj -->
+    <div id="proj" class="w3-container person">
+    <h5 class="w3-opacity" id="proj">My proj</h5>
+    <div w3-include-html="https://alexandroshub.github.io/projects.html" id="home">
+    </div><script>w3.includeHTML();</script></div><!-- /proj -->
+
+<!-- links -->
+    <div id="links" class="w3-container person">
+    <h5 class="w3-opacity">My links</h5>
+    <div w3-include-html="https://alexandroshub.github.io/links.html" id="home"></div>
+    <script>w3.includeHTML();</script></div><!-- /links --> 
 
 </div>
 
