--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!--The "about" page
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -6,7 +5,7 @@
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 12/12/2017  |  Alpha Stage -->
+Last Update: 17/12/2017  |  Alpha Stage -->
 
 <!DOCTYPE html> 
 <html>
@@ -22,7 +21,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 .w3-bar-block .w3-bar-item {padding: 16px}
 </style>
 <body>
-<a href="https://alexandroshub.github.io" class="w3-bar-item w3-large"><img src=" https://78.media.tumblr.com/50f00164412539b09c771b01bff8ab9d/tumblr_p0bypelh4I1si59zfo1_250.png " style="width:60;" id="abouthome"></a>
+<a href="https://alexandroshub.github.io" class="w3-bar-item w3-large"><img src=" https://78.media.tumblr.com/50f00164412539b09c771b01bff8ab9d/tumblr_p0bypelh4I1si59zfo1_250.png " style="width:90;"></a>
 <div id="about" class="w3-container person">
   <br>
   <img class="w3-round  w3-animate-top" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:20%;">
@@ -51,6 +50,11 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 <a href=" https://alexispapy.tumblr.com/ "><i class="fa fa-tumblr"></i></a>
 <a href=" 6949452023 "><i class="fa fa-whatsapp"></i></a>
 <a href=" a-papaspyrou@outlook.com.gr  "><i class="fa fa-skype"></i></a> 
+<hr><h5 class="w3-opacity">Pages</h5>
+<a class="w3-button w3-black" href="#">Go to index<i class="w3-margin-left fa fa-cogs"></i></a>
+<a class="w3-button w3-light-grey" href="#">Check out my CV<i class="w3-margin-left fa fa-cogs"></i></a>
+<a class="w3-button w3-light-grey" href="#">Check out my work<i class="w3-margin-left fa fa-cogs"></i></a>
+ <a class="w3-button w3-red" href="https://m.me/papaspyrou.alexandros"> PLUS<i class="w3-margin-left fa fa-comments-o"></i></a>
 <hr>
   <p>Ο διαδικτυακός αυτός χώρος εξελίσσεται και συντηρείται αποκλειστικά από τον Alexandro Papaspyrou. Γίνεται κάθε προσπάθεια ώστε να παρέχονται χωρίς διακοπή όλες οι σελίδες, οι υπηρεσίες, οι επιλογές και τα περιεχόμενα αλλά δεν μπορούμε να εγγυηθούμε ότι δεν θα υπάρξουν αστοχίες και σφάλματα. Λαμβάνουμε όλα τα απαραίτητα μέτρα ώστε να μην υπάρξουν ιοί η άλλο κακόβουλο λογισμικό στην ιστοσελίδα ή στους εξυπηρετητές (servers) που την φιλοξενούν, αλλά δεν μπορούμε να εγγυηθούμε τα αποτελέσματα. Οι δημιουργοί της παρούσας ιστοσελίδας διατηρούν το δικαίωμα να διακόψουν προσωρινά ή μόνιμα τη λειτουργία της, για οποιονδήποτε λόγο. Σε αυτή την περίπτωση δεν φέρουν καμία ευθύνη για τυχόν απώλεια δεδομένων, κειμένων, φωτογραφιών κλπ. που έχουν αναρτηθεί από κάποιον χρήστη. Το site, μεταξύ άλλων, μπορεί να υποστηρίζει συχνές ερωτήσεις, δυνατότητα επικοινωνίας, διαφημίσεις, banners, δημοσκοπήσεις και μηνύματα σε σημεία που επιλέγουν οι διαχειριστές του.</p>
 	<p>Το Site ελέγχεται καθημερινά για ιούς και κακόβουλο λογισμικό από https://www.virustotal.com https://quttera.com https://sitecheck.sucuri.net. Το περιεχόμενο και η πρόσβαση στο site ήταν, είναι και θα παραμείνει δωρεάν. Όλο το site είναι 100% HTML γραμμένο με λεπτομέρεια και αγάπη . https://www.w3schools.com/ Με online εμπειρία περισσότερο από 6 χρόνια.</p>
@@ -64,7 +68,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 <!-- linkedin --><a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:15px;color:white"></i></a>
 <!-- github --><a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:white"></i></a> | 
 <!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018</div>
-<!-- Signature --><img src= "https://fontmeme.com/temporary/4aa43933ca480ae6e80406cace04ca5b.png" style="width:270px;" alt="Signature" align="bottom">
+<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:270px;" alt="Signature" align="bottom">
 </footer><!-- End footer -->
 </body>
 </html>
