--- a/intex.html
+++ b/intex.html
@@ -6,7 +6,7 @@
 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 15/12/2017  |  Beta Stage 
+Last Update: 17/12/2017  |  Beta Stage 
 -->
 
 <!DOCTYPE html>
@@ -270,18 +270,9 @@ Files & Publications</div>
 .active:after {    content: "\2212";}
 .panel {    padding: 0 18px;    background-color: white;    max-height: 0;    overflow: hidden;    transition: max-height 0.2s ease-out;}
 </style>
-<button class="accordion">SUPPORT</button>
+<button class="accordion">CONTACT</button>
 <div class="panel">
-  <p>soon.</p>
-</div>
-<button class="accordion">SOLUTIONS</button>
-<div class="panel">
-  <p>soon.</p>
-</div>
-<button class="accordion">MORE</button>
-<div class="panel">
-  <p>soon.</p>
-</div>
+<p><!-- www.123formbuilder.com script begins here --><script type="text/javascript" defer src="//www.123formbuilder.com/embed/3216186.js" data-role="form" data-default-width="650px"></script><!-- www.123formbuilder.com script ends here --></p></div>
 <script>
 var acc = document.getElementsByClassName("accordion"); var i; for (i = 0; i < acc.length; i++) {acc[i].onclick = function() { this.classList.toggle("active"); var panel = this.nextElementSibling; if (panel.style.maxHeight){panel.style.maxHeight = null; } else { panel.style.maxHeight = panel.scrollHeight + "px"; }}}
 </script>
@@ -289,8 +280,7 @@ var acc = document.getElementsByClassName("accordion"); var i; for (i = 0; i < a
 
 <!-- finale -->
 <div class="w3-row w3-center w3-dark-grey w3-padding-8">
-  <div class="w3-section"><b>soon</b> ::   
-  
+  <div class="w3-section"><a href="https://alexandroshub.github.io/soon" class="w3-button w3-black"><i class="fa fa-arrow-up w3-margin-right"></i>TECH SUPPORT & SOLUTIONS</a>
   </div>
 </div>
 <!-- Footer --><footer class="w3-center w3-black w3-padding-16">
