--- a/xmas.html
+++ b/xmas.html
@@ -1,5 +1,15 @@
+
+<!--XMAS
+
+░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+Welcome in my personal website 100% HTML Hosted by Github
+Handcrafted With ❤ By: Alexandros Papaspyrou
+Last Update: 20/12/2017  |  alpha Stage -->
+<!DOCTYPE html> 
 <html>
-<title>Papaspyrou</title>
+<title>Papaspyrou Alexandros | CV</title>
 <link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
 <meta charset="UTF-8">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
@@ -43,7 +53,7 @@
   100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
 }	
 
-body { background: #efefef url(https://i.imgur.com/9mv2XGt.gif)  no-repeat local center center; 
+body { background: #efefef url(https://cdn.pixabay.com/photo/2017/01/14/13/59/castelmezzano-1979546_960_720.jpg)  no-repeat local center center; 
     min-height: 100%;
     background-position: center;
     background-size: cover;
@@ -52,9 +62,9 @@ body { background: #efefef url(https://i.imgur.com/9mv2XGt.gif)  no-repeat local
 
 <body>
 <div class="w3-display-middle"><center>
-<img src="https://pics.clipartpng.com/midle/Merry_Christmas_Red_Text_Decor_PNG_Clipart-36.png" style="width:370px;">
+<img src="https://pics.clipartpng.com/midle/Merry_Christmas_Red_Text_Decor_PNG_Clipart-36.png" style="width:400px;">
 </center></div>
-
 <div id="snow"></div>
+
 </body>
 </html>
