--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Welcome... jump to XMAS page
+<!-- Welcome... 
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -6,14 +6,14 @@
 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 1/12/2017  |  Alpha Stage -->
+Last Update: 17/12/2017  |  Alpha Stage -->
 
 <!DOCTYPE html>
 <html>
 <title>Papaspyrou</title>
 <link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
 <meta charset="UTF-8">
-<!-- xmaspage --><meta http-equiv="Refresh" content="3;url=https://alexandroshub.github.io/xmas"><!-- xmaspage -->
+<!-- xmaspage -><meta http-equiv="Refresh" content="3;url=https://alexandroshub.github.io/xmas"><!-- xmaspage -->
 
 
 <script src="https://www.w3schools.com/lib/w3.js"></script>
@@ -26,35 +26,11 @@ Last Update: 1/12/2017  |  Alpha Stage -->
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-    background-image: url('https://i.imgur.com/9mv2XGt.gif');
+    background-image: url('https://78.media.tumblr.com/fc1944e0b63dda717769ac06c433d4b3/tumblr_p13nvajL7r1si59zfo1_1280.jpg');
     min-height: 100%;
     background-position: center;
     background-size: cover;
 }
-
-.loader {
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid black;
-  border-bottom: 16px solid black;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
-}
-
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-
-
 </style>
 <body>
 
@@ -62,16 +38,13 @@ body, html {height: 100%}
 <audio autoplay id="audio-example-no-controls" class="audio-example" src="http://srv44.listentoyoutube.com/download/4paZbGljoGZpZLWr2NmXbLVhnWNmY21ulpWYtIWZ26aZoY2nv9LYrK6SzQ==/2CELLOS%20-%20Despacito.mp3"> You will see this text if native audio playback is not supported. </audio> <style> .audio-example { display: block; } </style> -->
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-
-<div class="w3-display-topleft w3-text-white w3-large" style="padding:24px 48px">
-
-<img src="https://78.media.tumblr.com/50f00164412539b09c771b01bff8ab9d/tumblr_p0bypelh4I1si59zfo1_250.png" style="width:170px;">
+<div class="w3-display-topleft   w3-padding-large w3-large" >
+  <a href="https://alexandroshub.github.io"><img src=" https://78.media.tumblr.com/50f00164412539b09c771b01bff8ab9d/tumblr_p0bypelh4I1si59zfo1_250.png "></a>
 </div>
+ <div class="w3-display-topright w3-padding-large w3-xlarge">
+    soon...
+  </div>
 
-  <div class="w3-display-middle">
-    <center><h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
-    <div class="loader"></div>
-    </center></div>
 <!-- SC MEDIA --><span class="w3-hide-small">
 <div class="w3-display-bottomleft w3-text-white w3-large" style="padding:24px 48px">
     <a href="https://www.facebook.com/papaspyrou.a">
