--- a/cv.html
+++ b/cv.html
@@ -1,4 +1,5 @@
 
+
 <!--CVwebpage
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -127,10 +128,11 @@ C / PHP / Matlab / Simulink / LabView / Multisim
 <p>
 <a class="twitter-timeline" data-width="100%" data-height="300" data-link-color="#000000" href="https://twitter.com/A_Papaspyrou">Tweets by A_Papaspyrou</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </p>
-<p class="w3-large"><b><i class="fa fa-camera-retro fa-fw w3-margin-right w3-text-black"></i>Photos</b></p>
+<!--<p class="w3-large"><b><i class="fa fa-camera-retro fa-fw w3-margin-right w3-text-black"></i>Photos</b></p>
 <p>
 <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-bc576466-1ee9-4dc6-8f6e-f01d47683217"></div>
+-->
 </div></div><br>
 <!-- /socialme -->
 
@@ -245,7 +247,7 @@ C / PHP / Matlab / Simulink / LabView / Multisim
 <!-- linkedin --><a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:15px;color:white"></i></a>
 <!-- github --><a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:white"></i></a> | 
 <!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018</div>
-<!-- Signature --><img src= "https://fontmeme.com/temporary/4aa43933ca480ae6e80406cace04ca5b.png" style="width:270px;" alt="Signature" align="bottom">
+<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:270px;" alt="Signature" align="bottom">
 </footer><!-- End footer -->
 
 <script>// Script to open and close sidebar
