--- a/about.html
+++ b/about.html
@@ -25,41 +25,84 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 <div id="about" class="w3-container person">
   <br>
   <img class="w3-round  w3-animate-top" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:20%;">
-  <h5 class="w3-opacity">Subject: Contact Me</h5>
-  <h4><i class="fa fa-clock-o"></i> From Papaspyrou Alexandros, Dec 12, 2017.</h4>
-  <a class="w3-button w3-red" href="mailto:alexispapy@gmail.com?Subject=Web%20Email" target="_top">Sent me Email<i class="w3-margin-left fa fa-envelope"></i></a>
+  <h5 class="w3-opacity">Welcome in my personal website <br>100% HTML Hosted by Github<br> Handcrafted With ❤ By: Alexandros Papaspyrou</h5>
+<hr><h4><i class="fa fa-clock-o"></i> Last Update: 18/12/2017 <br> Alpha Stage </h4>
+<hr></div>
+
+
+
+<!-- SSM -->
+<style>
+.accordion {    background-color: #eee;    color: #444;  cursor: pointer;   padding: 18px;    width: 100%;   border: none;   text-align: left;    outline: none;   font-size: 15px;   transition: 0.4s; }
+.active, .accordion:hover {  background-color: #ccc;}
+.accordion:after {    content: '\002B';    color: #777;    font-weight: bold;    float: right;    margin-left: 5px;}
+.active:after {    content: "\2212";}
+.panel {    padding: 0 18px;    background-color: white;    max-height: 0;    overflow: hidden;    transition: max-height 0.2s ease-out;}
+</style>
+
+
+<button class="accordion">Contact</button>
+<div class="panel">
+ <p>
+ <a class="w3-button w3-red" href="mailto:alexispapy@gmail.com?Subject=Web%20Email" target="_top">Sent me Email<i class="w3-margin-left fa fa-envelope"></i></a>
   <a class="w3-button w3-blue" href="https://m.me/papaspyrou.alexandros"> Sent me Message<i class="w3-margin-left fa fa-comments-o"></i></a>
   <a class="w3-button w3-green" href="tel:+306949452023">Call Me<i class="w3-margin-left fa fa-phone"></i></a>
 <a class="w3-button w3-light-grey" href="#">Talk to my BOT<i class="w3-margin-left fa fa-cogs"></i></a>
-<br><br>   
-<a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:14px;color:black"></i></a>
-<a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:14px;color:black"></i></a>
-<a href=" http://stackoverflow.com/users/7315499/alexispapy "><i class="fa fa-stack-overflow" style="font-size:14px;color:black"></i></a>
-<a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:black"></i></a>
-<a href=" https://www.reddit.com/user/alexispapy "><i class="fa fa-reddit-alien" style="font-size:14px;color:black"></i></a>
-<a href="https://www.youtube.com/channel/UCticUCJNkJpUvLq6F-1Zujw "><i class="fa fa-youtube-play" style="font-size:14px;color:black"></i></a> 
-<a href=" https://www.flickr.com/photos/alexispapy/albums"><i class="fa fa-flickr" style="font-size:14px;color:black"></i></a>
-<a href="https://www.facebook.com/papaspyrou.alexandros"><i class="fa fa-facebook" style="font-size:14px;color:black"></i></a> 
-<a href=" http://www.slideshare.net/alexandrospapaspurou "><i class="fa fa-slideshare" style="font-size:14px;color:black"></i></a>
-<a href="https://www.instagram.com/alexandrospapaspyrou"><i class="fa fa-instagram" style="font-size:14px;color:black"></i></a>
-<a href=" https://plus.google.com/+AlexandrosPapaspyrou "><i class="fa fa-google-plus" style="font-size:14px;color:black"></i></a>
-<a href=" http://www.instructables.com/member/alexispapy/"><i class="fa fa-rocket" style="font-size:14px;color:black"></i></a>
-<a href=" https://bitbucket.org/alexispapy "><i class="fa fa-bitbucket" style="font-size:14px;color:black"></i></a>
-<a href=" https://vimeo.com/alexispapy "><i class="fa fa-vimeo" style="font-size:14px;color:black"></i></a>
-<a href=" https://gr.pinterest.com/alexispapy "><i class="fa fa-pinterest-p" style="font-size:14px;color:black"></i></a>
-<a href=" https://alexispapy.tumblr.com/ "><i class="fa fa-tumblr"></i></a>
-<a href=" 6949452023 "><i class="fa fa-whatsapp"></i></a>
-<a href=" a-papaspyrou@outlook.com.gr  "><i class="fa fa-skype"></i></a> 
-<hr><h5 class="w3-opacity">Pages</h5>
-<a class="w3-button w3-black" href="#">Go to index<i class="w3-margin-left fa fa-cogs"></i></a>
-<a class="w3-button w3-light-grey" href="#">Check out my CV<i class="w3-margin-left fa fa-cogs"></i></a>
-<a class="w3-button w3-light-grey" href="#">Check out my work<i class="w3-margin-left fa fa-cogs"></i></a>
- <a class="w3-button w3-red" href="https://m.me/papaspyrou.alexandros"> PLUS<i class="w3-margin-left fa fa-comments-o"></i></a>
-<hr>
-  <p>Ο διαδικτυακός αυτός χώρος εξελίσσεται και συντηρείται αποκλειστικά από τον Alexandro Papaspyrou. Γίνεται κάθε προσπάθεια ώστε να παρέχονται χωρίς διακοπή όλες οι σελίδες, οι υπηρεσίες, οι επιλογές και τα περιεχόμενα αλλά δεν μπορούμε να εγγυηθούμε ότι δεν θα υπάρξουν αστοχίες και σφάλματα. Λαμβάνουμε όλα τα απαραίτητα μέτρα ώστε να μην υπάρξουν ιοί η άλλο κακόβουλο λογισμικό στην ιστοσελίδα ή στους εξυπηρετητές (servers) που την φιλοξενούν, αλλά δεν μπορούμε να εγγυηθούμε τα αποτελέσματα. Οι δημιουργοί της παρούσας ιστοσελίδας διατηρούν το δικαίωμα να διακόψουν προσωρινά ή μόνιμα τη λειτουργία της, για οποιονδήποτε λόγο. Σε αυτή την περίπτωση δεν φέρουν καμία ευθύνη για τυχόν απώλεια δεδομένων, κειμένων, φωτογραφιών κλπ. που έχουν αναρτηθεί από κάποιον χρήστη. Το site, μεταξύ άλλων, μπορεί να υποστηρίζει συχνές ερωτήσεις, δυνατότητα επικοινωνίας, διαφημίσεις, banners, δημοσκοπήσεις και μηνύματα σε σημεία που επιλέγουν οι διαχειριστές του.</p>
+<button onclick="skype()" class="w3-button w3-blue" ><i class="fa fa-skype"></i></button><script>function skype() { alert("a-papaspyrou@outlook.com.gr");}</script>
+ </p>
+</div>
+
+<button class="accordion">Pages</button>
+<div class="panel">
+ <p>
+<a class="w3-button w3-black" href="">Go to Home<i class="w3-margin-left fa  fa-home"></i></a>
+<a class="w3-button w3-light-grey" href="">Check out my CV<i class="w3-margin-left fa fa-id-card-o"></i></a>
+<a class="w3-button w3-light-grey" href="">Check out my work<i class="w3-margin-left fa fa-folder-open"></i></a>
+<a class="w3-button w3-red" href=""> PLUS<i class="w3-margin-left fa fa-plus-square"></i></a> 
+ </p>
+</div>
+
+<button class="accordion">LEGACY</button>
+<div class="panel">
+
+ <p>Ο διαδικτυακός αυτός χώρος εξελίσσεται και συντηρείται αποκλειστικά από τον Alexandro Papaspyrou. Γίνεται κάθε προσπάθεια ώστε να παρέχονται χωρίς διακοπή όλες οι σελίδες, οι υπηρεσίες, οι επιλογές και τα περιεχόμενα αλλά δεν μπορούμε να εγγυηθούμε ότι δεν θα υπάρξουν αστοχίες και σφάλματα. Λαμβάνουμε όλα τα απαραίτητα μέτρα ώστε να μην υπάρξουν ιοί η άλλο κακόβουλο λογισμικό στην ιστοσελίδα ή στους εξυπηρετητές (servers) που την φιλοξενούν, αλλά δεν μπορούμε να εγγυηθούμε τα αποτελέσματα. Οι δημιουργοί της παρούσας ιστοσελίδας διατηρούν το δικαίωμα να διακόψουν προσωρινά ή μόνιμα τη λειτουργία της, για οποιονδήποτε λόγο. Σε αυτή την περίπτωση δεν φέρουν καμία ευθύνη για τυχόν απώλεια δεδομένων, κειμένων, φωτογραφιών κλπ. που έχουν αναρτηθεί από κάποιον χρήστη. Το site, μεταξύ άλλων, μπορεί να υποστηρίζει συχνές ερωτήσεις, δυνατότητα επικοινωνίας, διαφημίσεις, banners, δημοσκοπήσεις και μηνύματα σε σημεία που επιλέγουν οι διαχειριστές του.</p>
 	<p>Το Site ελέγχεται καθημερινά για ιούς και κακόβουλο λογισμικό από https://www.virustotal.com https://quttera.com https://sitecheck.sucuri.net. Το περιεχόμενο και η πρόσβαση στο site ήταν, είναι και θα παραμείνει δωρεάν. Όλο το site είναι 100% HTML γραμμένο με λεπτομέρεια και αγάπη . https://www.w3schools.com/ Με online εμπειρία περισσότερο από 6 χρόνια.</p>
 	<p>DadoBox / RoboDay & many more... <br>online since February 2011</p>
+
 </div>
+
+
+<button class="accordion">SOCIAL</button>
+<div class="panel">
+<p>
+
+<a class="w3-button w3-light-grey" href="https://twitter.com/A_Papaspyrou"><i class="fa fa-twitter"></i></a>
+<a class="w3-button w3-light-grey" href=" https://gr.linkedin.com/in/alexandrospapaspyrou  "><i class="fa fa-linkedin"></i></a>
+<a class="w3-button w3-light-grey" href=" https://github.com/alexandroshub "><i class="fa fa-github-alt"></i></a>
+<a class="w3-button w3-light-grey" href=" http://www.slideshare.net/alexandrospapaspurou "><i class="fa fa-slideshare"></i></a>
+<a class="w3-button w3-light-grey" href=" https://vimeo.com/alexispapy "><i class="fa fa-vimeo"></i></a>
+<a class="w3-button w3-light-grey" href=" http://stackoverflow.com/users/7315499/alexispapy "><i class="fa fa-stack-overflow"></i></a>
+<a class="w3-button w3-light-grey" href=" https://www.reddit.com/user/alexispapy "><i class="fa fa-reddit-alien"></i></a>
+<a class="w3-button w3-light-grey" href=" https://www.youtube.com/channel/UCticUCJNkJpUvLq6F-1Zujw "><i class="fa fa-youtube-play"></i></a>
+<a class="w3-button w3-light-grey" href=" https://www.flickr.com/photos/alexispapy/albums "><i class="fa fa-flickr"></i></a>
+<a class="w3-button w3-light-grey" href=" https://www.facebook.com/papaspyrou.alexandros "><i class="fa fa-facebook"></i></a>
+<a class="w3-button w3-light-grey" href=" https://www.instagram.com/alexandrospapaspyrou "><i class="fa fa-instagram"></i></a>
+<a class="w3-button w3-light-grey" href="  https://plus.google.com/+AlexandrosPapaspyrou "><i class="fa fa-google-plus"></i></a>
+<a class="w3-button w3-light-grey" href="  http://www.instructables.com/member/alexispapy "><i class="fa fa-rocket"></i></a>
+<a class="w3-button w3-light-grey" href="  https://bitbucket.org/alexispapy "><i class="fa fa-bitbucket"></i></a>
+<a class="w3-button w3-light-grey" href="  https://gr.pinterest.com/alexispapy "><i class="fa fa-pinterest-p"></i></a>
+<a class="w3-button w3-light-grey" href=" https://alexispapy.tumblr.com "><i class="fa fa-tumblr"></i></a>
+<a class="w3-button w3-light-grey" href="  "><i class="fa fa-asterisk  "></i></a>
+
+</p></div>
+
+
+<script>
+var acc = document.getElementsByClassName("accordion"); var i; for (i = 0; i < acc.length; i++) {acc[i].onclick = function() { this.classList.toggle("active"); var panel = this.nextElementSibling; if (panel.style.maxHeight){panel.style.maxHeight = null; } else { panel.style.maxHeight = panel.scrollHeight + "px"; }}}
+</script>
+<!-- SSM -->
+
+
 <!-- Footer --><footer class="w3-center w3-black w3-padding-16">
 <!-- top --> <a href="#abouthome" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
 <!-- cv --> <a href="https://drive.google.com/open?id=0B4_FfowS43ESQmVuMGN1cDR4a1k" class="w3-button w3-light-grey"><i class="fa fa-arrow-down w3-margin-right"></i>Download My Cv</a>
