--- a/intex.html
+++ b/intex.html
@@ -6,7 +6,7 @@
 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 17/12/2017  |  Beta Stage 
+Last Update: 20/12/2017  |  Beta Stage 
 -->
 
 <!DOCTYPE html>
@@ -88,7 +88,7 @@ body, html {
 </div>
 
 <!-- Container (About Section) -->
-<div class="w3-content w3-container w3-padding-64" id="about">
+<div class="w3-content w3-container w3-padding-32" id="about">
 
 <style> .chip img { float: center; margin: 10px; height: 110px; width: 110px; border-radius: 20%;}</style>
 
@@ -123,7 +123,7 @@ body, html {
 </div>
 -->
 <center><a href="https://alexandroshub.github.io/cv.html"><button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD myCV</button></a>
-<a href="https://alexandroshub.github.io/email.html"><button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD email</button></a>
+<a href="https://alexandroshub.github.io/about.html"><button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD about</button></a>
 </center>
 
 </div>
@@ -151,10 +151,10 @@ body, html {
 </div>
 
 <!-- Container (Portfolio Section) -->
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
+<div class="w3-content w3-container w3-padding-32" id="portfolio">
   <h3 class="w3-center">MY WORK</h3>
-  <p class="w3-center"><em> "Σχεδόν ό,τι κάνεις είναι ασήμαντο, αλλά είναι σημαντικό να το κάνεις."</em></p><br>
-
+  <p class="w3-center"><em> "Σχεδόν ό,τι κάνεις είναι ασήμαντο, αλλά είναι σημαντικό να το κάνεις."</em></p>
+</div>
 <!-- Good offers -->
    <br> <div class="w3-row-padding">
 <!-- CoNo IoT -->    
@@ -181,7 +181,7 @@ Files & Publications</div>
 <img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Files" style="width:100%">
 </a></div></div>
 
-</div>
+
 
 <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) 
   <div class="w3-row-padding w3-center">
@@ -249,7 +249,7 @@ Files & Publications</div>
   </div>
 </div>
 <!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-64" id="contact">
+<div class="w3-content w3-container w3-padding-32" id="contact">
   <h3 class="w3-center">Η δημιουργία του plus ειναι σε εξέλιξη .</h3>
   <p class="w3-center"><em>θα ειναι διαθέσιμο μέσα στο πρώτο εξάμηνο του 2018.
   <br> Μέχρι τότε... </em>
@@ -277,11 +277,49 @@ Files & Publications</div>
 var acc = document.getElementsByClassName("accordion"); var i; for (i = 0; i < acc.length; i++) {acc[i].onclick = function() { this.classList.toggle("active"); var panel = this.nextElementSibling; if (panel.style.maxHeight){panel.style.maxHeight = null; } else { panel.style.maxHeight = panel.scrollHeight + "px"; }}}
 </script>
 <!-- SSM -->
+  <footer class="w3-container w3-padding-32 w3-dark-grey">
+  <div class="w3-row-padding">
+    <div class="w3-third">
+      <h3>FOOTER</h3>
+      <p> <span class="w3-tag w3-black"><a href="https://alexandroshub.github.io/about">ABOUT</a></span>   Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+     <div class="w3-section"><a href="https://alexandroshub.github.io/soon" class="w3-button w3-black"><i class="fa fa-arrow-up w3-margin-right"></i>TECH SUPPORT & SOLUTIONS</a>
+  </div>
+    </div>
+  
+    <div class="w3-third">
+      <h3>BLOG POSTS</h3>
+      <ul class="w3-ul w3-hoverable">
+        <li class="w3-padding-16">
+          <img src="/w3images/workshop.jpg" class="w3-left w3-margin-right" style="width:50px">
+          <span class="w3-large">Lorem</span><br>
+          <span>Sed mattis nunc</span>
+        </li>
+        <li class="w3-padding-16">
+          <img src="/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
+          <span class="w3-large">Ipsum</span><br>
+          <span>Praes tinci sed</span>
+        </li> 
+      </ul>
+    </div>
 
+    <div class="w3-third">
+      <h3>POPULAR TAGS</h3>
+      <p>
+      
+<span class="w3-tag w3-black w3-margin-bottom">AUTOMATION</span>     
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">ARDUINO</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">RASPBERY PI</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">IOT</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">HACK</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">DIY</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">PC</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">ROBOTS</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">FUTURE</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">NEWS</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">PLUS</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">WEB</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">INTERNET</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">LINKS</span>
+      </p>
+    </div>
+
+  </div>
+  </footer>
 <!-- finale -->
 <div class="w3-row w3-center w3-dark-grey w3-padding-8">
-  <div class="w3-section"><a href="https://alexandroshub.github.io/soon" class="w3-button w3-black"><i class="fa fa-arrow-up w3-margin-right"></i>TECH SUPPORT & SOLUTIONS</a>
-  </div>
+ 
 </div>
 <!-- Footer --><footer class="w3-center w3-black w3-padding-16">
 <!-- top --> <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
