--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 17/12/2017  |  Alpha Stage -->
+Last Update: 1/1/2017  |  Alpha Stage -->
 
 <!DOCTYPE html>
 <html>
@@ -42,7 +42,7 @@ body, html {height: 100%}
   <a href="https://alexandroshub.github.io"><img src=" https://78.media.tumblr.com/50f00164412539b09c771b01bff8ab9d/tumblr_p0bypelh4I1si59zfo1_250.png "></a>
 </div>
  <div class="w3-display-topright w3-padding-large w3-xlarge">
-    soon...
+   <a href="https://alexandroshub.github.io/intex" style="text-decoration:none">ENTER</a>
   </div>
 
 <!-- SC MEDIA --><span class="w3-hide-small">
