--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ var acc = document.getElementsByClassName("accordion"); var i; for (i = 0; i < a
       <h3>WELL...</h3>
       <p> <span class="w3-tag w3-black"><a href="https://alexandroshub.github.io/about">ABOUT</a></span> 
       Λιγα λογια για τη σελίδα.</p>
-     <div class="w3-section"><a href="https://alexandroshub.github.io/soon" class="w3-button w3-black"><i class="fa fa-arrow-up w3-margin-right"></i>TECH SUPPORT & SOLUTIONS</a>
+     <div class="w3-section"><a href="https://alexandroshub.github.io/tss.html" class="w3-button w3-black"><i class="fa fa-arrow-up w3-margin-right"></i>TECH SUPPORT & SOLUTIONS</a>
   </div>
     </div>
   
