--- a/tss.html
+++ b/tss.html
@@ -1,1 +1,58 @@
+<!-- 2/2/18
 
+░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+
+Welcome in my personal website 100% HTML Hosted by Github
+Handcrafted With ❤ By: Alexandros Papaspyrou
+-->
+<!DOCTYPE html>
+<html>
+<title>Papaspyrou</title>
+<link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body,h1,h5 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+    background-image: url('https://78.media.tumblr.com/6f0c0b35f9f3da8183855ac1be8abb8f/tumblr_oz7c9bifSb1si59zfo1_1280.jpg');
+    min-height: 100%;
+    background-position: center;
+    background-size: cover;
+}
+</style>
+<body>
+
+<div class="bgimg w3-display-container w3-text-white">
+  <div class="w3-display-middle w3-jumbo">
+    <p>τέκ σολούσιονς</p>
+  </div>
+  <div class="w3-display-topleft w3-container w3-xlarge">
+  <p><button onclick="document.getElementById('links').style.display='block'" class="w3-button w3-black">σούν</button></p>
+  </div>
+  <div class="w3-display-bottomleft w3-container">
+    <p class="w3-large"></p>
+  </div>
+</div>
+
+<div id="links" class="w3-modal">
+  <div class="w3-modal-content w3-animate-zoom">
+    <div class="w3-container w3-black">
+      <span onclick="document.getElementById('links').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
+      <h1>σούν</h1>
+    </div>
+    <div class="w3-container">
+<!-- ================================================================  -->
+
+<!-- ================================================================  -->  
+
+</div>
+</div>
+</div>
+
+</body>
+</html>
