--- a/links.html
+++ b/links.html
@@ -1,4 +1,4 @@
-<!-- 28/1/18
+<!-- 4/2/18
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -135,49 +135,49 @@ body, html {height: 100%}
         <a href="http://www.openoffice.org/el/">openoffice</a>|  
         <a href="http://www.videolan.org/vlc/">vlc</a>|  
 
-<br><font color=#fffff size=2.5><b>CODE</b></font><br>
+<br><font  size=2.5><b>CODE</b></font><br>
         <a href="https://scratch.mit.edu">scratch</a>|  
         <a href="http://appinventor.mit.edu/explore/">appinventor</a>|  
   
-<br><font color=#fffff size=2.5><b>NEWS</b></font><br>
+<br><font size=2.5><b>NEWS</b></font><br>
         <a href="http://lifehacker.com/">lifehacker</a>| 
         <a href="http://www.pcsteps.gr/">pcsteps</a>| 
   
-<br><font color=#fffff size=2.5><b>FREE</b></font><br> 
+<br><font size=2.5><b>FREE</b></font><br> 
         <a href="https://prezi.com/">Prezi</a>| 
         <a href="http://www.rainmeter.net">RainMeter</a>|
         <a href="http://redmp3.cc/"> freemp3 </a>
   
-<br><font color=#fffff size=2.5><b>OPEN</b></font><br>  
+<br><font  size=2.5><b>OPEN</b></font><br>  
         <a href="https://www.clementine-player.org/el/">clementine</a>| 
         <a href="https://opensource.com">opensource</a>| 
 
-<br><font color=#fffff size=2.5><b>MAKE</b></font><br> 
+<br><font  size=2.5><b>MAKE</b></font><br> 
         <a href="http://makezine.com/">makezine</a>|
         <a href="https://www.adafruit.com/">adafruit</a>|
 
-<br><font color=#fffff size=2.5><b>YOU n' the MATH</b></font><br>  
+<br><font  size=2.5><b>YOU n' the MATH</b></font><br>  
         <a href="http://integrals.wolfram.com/index.jsp">Olokliromata</a>| 
         <a href="http://m.wolframalpha.com/input/?i=derivative+of">Paragogoi</a>|
         <a href="http://www.numerics.info/calculator">Calculator</a>| 
 
-<br><font color=#fffff size=2.5><b>YOU n' the WEB</b></font><br> 
+<br><font  size=2.5><b>YOU n' the WEB</b></font><br> 
         <a href="https://www.webnode.gr/">webnode</a>| 
         <a href="https://www.yola.com">Yola</a>| 
         <a href="https://www.wix.com">Wix</a>| 
     	<a href="http://www.weebly.com">Weebly</a>| 
 
-<br><font color=#fffff size=2.5><b>Mobile</b></font><br>
+<br><font  size=2.5><b>Mobile</b></font><br>
       	<a href="http://www.doctorandroid.gr/">doctorandroid</a>| 
 
-<br><font color=#fffff size=2.5><b>Linux</b></font><br>
+<br><font  size=2.5><b>Linux</b></font><br>
       	<a href="http://www.linuxinsider.gr/">linuxinsider</a>| 
   
-<br><font color=#fffff size=2.5><b>Pirate</b></font><br>  
+<br><font  size=2.5><b>Pirate</b></font><br>  
 	  <a href="https://kickass.unblocked.la/">kickass</a>| 
 	  <a href="https://thepiratebay.vg/">tpb</a>|   
   
-<br><font color=#fffff size=2.5><b>PUAS</b></font><br>  
+<br><font  size=2.5><b>PUAS</b></font><br>  
 		<a href="http://auto.teipir.gr/">auto</a>| 
 		<a href="http://lib.puas.gr/">lib</a>| 
 		<a href="http://www.teipir.gr/mke/">mke</a>| 
@@ -185,24 +185,24 @@ body, html {height: 100%}
 		<a href="http://www.teipir.gr/index.php/el/">teipir</a>| 
 		<a href="http://auto-hsae.teipir.gr/#homepageh">hsae</a>| 
   
-<br><font color=#fffff size=2.5><b>Office</b></font><br>
+<br><font size=2.5><b>Office</b></font><br>
 		<a href="http://www.openoffice.org/el/">openoffice</a>|
 		<a href="https://el.libreoffice.org/">libreoffice</a>|
 		<a href="https://wiki.gnome.org/Apps/Evince">Evince</a>|
 		<a href="https://www.wps.com">wps</a>| 
 
-<br><font color=#fffff size=2.5><b>HOW TO</b></font><br>  
+<br><font size=2.5><b>HOW TO</b></font><br>  
     	<a href="http://www.wikihow.com/Main-Page">wikihow</a>| 
     	<a href="http://www.instructables.com/">instructables</a>|
 
-<br><font color=#fffff size=2.5><b>FilmNet</b></font><br>  
+<br><font  size=2.5><b>FilmNet</b></font><br>  
       <a href="http://greekdocumentaries2.blogspot.gr/">greekdocumentaries</a>| 
       <a href="http://www.dailymotion.com/CosmosgreekDocumentaries">CosmosgreekDocumentaries</a>| 
       <a href="http://thegeeksmedia.blogspot.gr/">thegeeksmedia</a>|
       <a href="https://oipeirates.se/">oipeirates</a>|
       <a href="http://gamatotv.me/">gamatotv</a>|
 
-<br><font color=#fffff size=2.5><b>more</b></font><br>  
+<br><font  size=2.5><b>more</b></font><br>  
     	<a href="http://www.dwrean.net/">Dwrean</a>| 
     	<a href="http://www.xrisima.com/">xrisima</a>|
     	<a href="http://osarena.net/">osarena</a>|
@@ -211,7 +211,7 @@ body, html {height: 100%}
         <a href="http://www.epinoo.gr/">epinoo</a>|
        <a href=" http://www.bitcoin-gr.org/">bitcoin</a>|
 
-  <br><font color=#fffff size=2.5><b>Friends</b></font><br>  
+  <br><font size=2.5><b>Friends</b></font><br>  
     	<a href="http://www.ardumotive.com/">ardumotive</a>| 
     	<a href="https://www.youtube.com/channel/UCboteGFyO5fTflI00DikhmA">@ria3w</a>|
 <!-- =============================================== -->   
