--- a/portfolio.html
+++ b/portfolio.html
@@ -102,30 +102,31 @@ h1 {
 
 <div id="myBtnContainer">
   <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-  <button class="btn" onclick="filterSelection('nature')"> Electronics</button>
-  <button class="btn" onclick="filterSelection('cars')"> Code</button>
-  <button class="btn" onclick="filterSelection('people')"> Arduino</button>
+  <button class="btn" onclick="filterSelection('nature')"> Electronics & IoT</button>
+  <button class="btn" onclick="filterSelection('cars')"> Developing & Code</button>
+  <button class="btn" onclick="filterSelection('people')"> Automations & Robotics</button>
+  <button class="btn" onclick="filterSelection('pub')"> Files & Publications</button>
 </div>
 
 <!-- Portfolio Gallery Grid -->
 <div class="row">
   <div class="column nature">
     <div class="content">
-      <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%">
+      <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" alt="Mountains" style="width:100%">
       <h4>Mountains</h4>
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
   <div class="column nature">
     <div class="content">
-    <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
+    <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" alt="Lights" style="width:100%">
       <h4>Lights</h4>
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
   <div class="column nature">
     <div class="content">
-    <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
+    <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Nature" style="width:100%">
       <h4>Forest</h4>
       <p>Lorem ipsum dolor..</p>
     </div>
@@ -133,21 +134,21 @@ h1 {
   
   <div class="column cars">
     <div class="content">
-      <img src="/w3images/cars1.jpg" alt="Car" style="width:100%">
+      <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
       <h4>Retro</h4>
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
   <div class="column cars">
     <div class="content">
-    <img src="/w3images/cars2.jpg" alt="Car" style="width:100%">
+    <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
       <h4>Fast</h4>
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
   <div class="column cars">
     <div class="content">
-    <img src="/w3images/cars3.jpg" alt="Car" style="width:100%">
+    <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
       <h4>Classic</h4>
       <p>Lorem ipsum dolor..</p>
     </div>
@@ -155,22 +156,22 @@ h1 {
 
   <div class="column people">
     <div class="content">
-      <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
+      <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
       <h4>Girl</h4>
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
   <div class="column people">
     <div class="content">
-    <img src="/w3images/people2.jpg" alt="Car" style="width:100%">
+    <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
       <h4>Man</h4>
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
-  <div class="column people">
+  <div class="column pub">
     <div class="content">
-    <img src="/w3images/people3.jpg" alt="Car" style="width:100%">
-      <h4>Woman</h4>
+    <img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Pub" style="width:100%">
+      <h4>File</h4>
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
