--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 1/1/2018  |  Alpha Stage -->
+Last Update: 1/2/2018  |  Alpha Stage -->
 
 <!DOCTYPE html> 
 <html>
@@ -21,12 +21,12 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 .w3-bar-block .w3-bar-item {padding: 16px}
 </style>
 <body>
-<a href="https://alexandroshub.github.io" class="w3-bar-item w3-large"><img src=" https://78.media.tumblr.com/50f00164412539b09c771b01bff8ab9d/tumblr_p0bypelh4I1si59zfo1_250.png " style="width:90;"></a>
+<a href="https://alexandroshub.github.io/index"><img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:40px;"></a>
 <div id="about" class="w3-container person">
   <br>
   <img class="w3-round  w3-animate-top" src="https://78.media.tumblr.com/2b01c844f1f4ac35041e40a919d32c70/tumblr_ox5z3w1rB21si59zfo1_500.jpg" style="width:20%;">
   <h5 class="w3-opacity">Welcome in my personal website <br>100% HTML Hosted by Github<br> Handcrafted With ❤ By: Alexandros Papaspyrou</h5>
-<hr><h4><i class="fa fa-clock-o"></i> Last Update: 1/1/2018 <br> Alpha Stage </h4>
+<hr><h4><i class="fa fa-clock-o"></i> Last Update: 1/2/2018 <br> Alpha Stage </h4>
 <hr></div>
 
 
@@ -55,10 +55,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 <button class="accordion">Pages</button>
 <div class="panel">
  <p>
-<a class="w3-button w3-black" href="">Go to Home<i class="w3-margin-left fa  fa-home"></i></a>
-<a class="w3-button w3-light-grey" href="">Check out my CV<i class="w3-margin-left fa fa-id-card-o"></i></a>
-<a class="w3-button w3-light-grey" href="">Check out my work<i class="w3-margin-left fa fa-folder-open"></i></a>
-<a class="w3-button w3-red" href=""> PLUS<i class="w3-margin-left fa fa-plus-square"></i></a> 
+<a class="w3-button w3-black" href="https://alexandroshub.github.io">Go to Home<i class="w3-margin-left fa  fa-home"></i></a>
+<a class="w3-button w3-light-grey" href="https://alexandroshub.github.io/cv.html">Check out my CV<i class="w3-margin-left fa fa-id-card-o"></i></a>
+<a class="w3-button w3-light-grey" href="https://alexandroshub.github.io/portfolio.html">Check out my work<i class="w3-margin-left fa fa-folder-open"></i></a>
+<a class="w3-button w3-red" href="https://alexandroshub.github.io/plus.html"> PLUS<i class="w3-margin-left fa fa-plus-square"></i></a> 
  </p>
 </div>
 
