--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ var acc = document.getElementsByClassName("accordion"); var i; for (i = 0; i < a
   <footer class="w3-container w3-padding-32 w3-dark-grey">
   <div class="w3-row-padding">
     <div class="w3-third">
-<h3>WELL...</h3><p> 
+<h3>WELL...</h3><p> Hi, I’m Alexandros. I’m a student living in Athens. I am a fan of automation, computers, and technology. I’m also interested in volunteering and DIY. 
 </p>
 </div>
 
