--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!-- 21/2/2018
+<!-- 26/2/2018
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -12,6 +12,7 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
 <head>
 <meta charset="UTF-8">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
@@ -113,30 +114,27 @@ h1 {
   <div class="column nature">
     <div class="content">
       <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" alt="Mountains" style="width:100%">
-      <h4>Mountains</h4>
-      <p>Lorem ipsum dolor..</p>
+      <h4>CoNo</h4>
+      <p>soon..</p>
     </div>
   </div>
   <div class="column nature">
     <div class="content">
     <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" alt="Lights" style="width:100%">
-      <h4>Lights</h4>
-      <p>Lorem ipsum dolor..</p>
+      <h4>Το κύκλωμα του Φωτοδιακόπτη</h4>
+      <p>
+Ο πιο απλός αυτοματισμός μπορεί να είναι ένας φωτοδιακόπτης.
+Όταν βραδιάζει, ανάβουν τα φώτα του σπιτιού.
+Κάπως έτσι το φτιάξαμε στο εργ. Ηλ. Συστημάτων.</p>
     </div>
   </div>
-  <div class="column nature">
-    <div class="content">
-    <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Nature" style="width:100%">
-      <h4>Forest</h4>
-      <p>Lorem ipsum dolor..</p>
-    </div>
-  </div>
+  
   
   <div class="column cars">
     <div class="content">
       <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
-      <h4>Retro</h4>
-      <p>Lorem ipsum dolor..</p>
+      <h4>Παιχνίδι σε VisualBasic για PC</h4>
+      <p> (χωρίς εγκατάσταση)</p> 
     </div>
   </div>
   <div class="column cars">
@@ -146,33 +144,34 @@ h1 {
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
-  <div class="column cars">
-    <div class="content">
-    <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
-      <h4>Classic</h4>
-      <p>Lorem ipsum dolor..</p>
-    </div>
-  </div>
 
   <div class="column people">
     <div class="content">
       <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
-      <h4>Girl</h4>
+      <h4>Μελέτη και Κατασκευή Μichatron</h4>
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
-  <div class="column people">
+  
+  <div class="column pub">
     <div class="content">
-    <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Car" style="width:100%">
-      <h4>Man</h4>
-      <p>Lorem ipsum dolor..</p>
+    <img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Pub" style="width:100%">
+      <h4>Η εξέλιξη των Η/Υ</h4>
+      <p>(από τον άβακα στο Tablet)
+Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας.<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<a href="https://issuu.com/a-papaspyrou/docs/computerevolution_alexandros_papasp
+"><i class="fa fa-user"></i></a>
+<a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><i class="fa fa-user"></i></a>
+</p>
     </div>
   </div>
   <div class="column pub">
     <div class="content">
     <img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Pub" style="width:100%">
-      <h4>File</h4>
-      <p>Lorem ipsum dolor..</p>
+      <h4>MPPT</h4>
+      <p>“ Η εξέλιξη των Η/Υ ” (από τον άβακα στο Tablet)
+Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας.</p>
     </div>
   </div>
 <!-- END GRID -->
@@ -180,6 +179,13 @@ h1 {
 
 <!-- END MAIN -->
 </div>
+
+
+<!-- Footer --><footer class="w3-center w3-black w3-padding-16">
+<!-- cv --> <a href="https://drive.google.com/open?id=0B4_FfowS43ESQmVuMGN1cDR4a1k" class="w3-button w3-light-grey"><i class="fa fa-arrow-down w3-margin-right"></i>Download My Cv</a>  |  
+<!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018
+</footer><!-- End footer -->
+
 
 <script>
 filterSelection("all")
